--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,6 @@ License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-URL: https://github.com/the-Hull/erkolor
+URL: https://github.com/the-Hull/erkolor,
+    https://the-hull.github.io/erkolor/
 BugReports: https://github.com/the-Hull/erkolor/issues
