--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,7 @@ URL: https://github.com/the-Hull/erkolor,
 BugReports: https://github.com/the-Hull/erkolor/issues
 Imports: 
     ggplot2
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
